feat: upgrade to java 21 (#55)